--- a/style.css
+++ b/style.css
@@ -24,15 +24,16 @@ body{
     display: flex;
     flex-wrap: wrap;
     border-bottom: 1px solid;
-    padding: 5% 0%;
 }
 .pfp {
     padding: 5%;
+    padding-bottom: 2%;
     width: 40%;
     
 }
 
 .pfp img{
+    margin-bottom: 5%;
     width: 100%;
     border-radius: 100%;
     border: 4px solid rgb(160, 160, 160);
@@ -42,13 +43,10 @@ body{
     justify-items: center;
     text-align: left;
 }
-.cvTitle{
-    margin-bottom: 18px;
-}
 
 .personalProfile{
-    margin-top: 15%;
-    margin-bottom: 15%;
+    margin-top: 10%;
+    margin-bottom: 10%;
 }
 
 .contactInfo p { 
