--- a/style.css
+++ b/style.css
@@ -5,7 +5,11 @@
 
 body{
     font: 1em sans-serif;
-    background-color: hsl(174, 100%, 96%);
+    background-color: hsl(170, 100%, 99%);
+}
+
+p{
+    margin-bottom: 1%;
 }
 
 .details h3{
@@ -18,9 +22,15 @@ body{
     width: 60%;
     display: flow-root;
     background-color: white;
+    box-shadow: 1px 1px 20px 1px rgb(212, 212, 212);
+    overflow: hidden;
+    padding: 0;
+    margin-top: 3%;
+    margin-bottom: 3%;
 }
 
 .head{
+    font-size: 1.2em;
     display: flex;
     flex-wrap: wrap;
     border-bottom: 1px solid;
@@ -42,6 +52,7 @@ body{
     margin: auto;
     justify-items: center;
     text-align: left;
+    width: 60%;
 }
 
 .personalProfile{
@@ -51,13 +62,16 @@ body{
 
 .contactInfo p { 
     display: inline;
+    margin-right: 5%;
+    font-size: 0.8em;
 }
 
 .details{
     display: flex;
     flex-wrap: wrap;
-    width: 100%;
+    width: 97%;
     margin: 12px;
+    background-color: hsl(40, 100%, 98%);
 }
 .leftPortion{
     max-width: 100%;
@@ -81,6 +95,9 @@ body{
     margin: 5%;
     min-height: fit-content;
     height: 50%;
+}
+.exp h4{
+    margin-bottom: 3%;
 }
 
 .edu{
